    - When a robot is done, try to turn them into an item
    - Cache which roboport a finished bot can be deposited in
    - Debug why bots going airborne
    - Time to burn this code at the stake for witchcraft
    - Check for age == 0
    - Notice my mistake thanks to stringweasel
    - Attempt to fast replace the roboports to void their requests
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2024. 11. 06
  Info:
    - Pull the robot_order_queue into lua
    - Check for all networks, for all surfaces, for all forces, and profile it
    - Profile some more
    - Trigger a created event for new construction bots, so we won't need to check every network in existance
    - Improve performance by like a quadrillion that way
    - Attempt to optimize the if orders
    - Keep it simple and only check for the current order
    - Teleport robots once to where they came from when out of tasks
    - Hide the construction bots from the naked eye
    - Slow down the frames between building
    - Make construction robots wait until the scaffolding is up
    - Hide robot sparks and smoke
    - Avoid animating tiles
    - Remove some commented out legacy code
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2024. 11. 04
  Info:
    - Begin the animation when a robot's next order is to pick up construction items
    - Stash version uploaded to https://forums.factorio.com/viewtopic.php?f=7&t=119764
    - Cleanup 〃
    - Bump version and abandon till 2.0.15
    - Abandon till 2.0.16 (https://forums.factorio.com/119764)
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2024. 11. 04
  Info:
    - Keep the render object invisible until it is set to frame 0 again
    - Variable for how long to wait with removing the scaffold after everything is done