@@ -10,6 +10,7 @@ Date: ????
     - Check for age == 0
     - Notice my mistake thanks to stringweasel
     - Attempt to fast replace the roboports to void their requests
+    - Prevent construction robots from relocating without a job
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.7
 Date: 2024. 11. 06
